Allow conversion of QObject Module API to QVariant

This commit adds a conversion codepath for QV8TypeResource to QVariant
where the resource contains a QObject module API.  This allows such a
module API to be used as the "target" in a Connections element.

Task-number: QTBUG-20937
Change-Id: I9214b531968f2e6981a86e643859a97297c6a02a
Reviewed-on: http://codereview.qt.nokia.com/3286
Reviewed-by: Chris Adams <christopher.adams@nokia.com>
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>